backend: add api update payment
